force-app/main/default/objects/FieloEE__Comment__c/FieloEE__Comment__c.object-meta.xml
<CustomObject>
    <description>Comments made by members in the members’ portal. Comments can be made on rewards and content feeds.</description>
    <label>Comment</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>