force-app/main/default/objects/FieloEE__Comment__c/fields/FieloEE__AbuseReporter__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__AbuseReporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Abuse Reporter</label>
    <referenceTo>FieloEE__Member__c</referenceTo>
    <relationshipName>Comments1</relationshipName>
    <type>Lookup</type>
</CustomField>