force-app/main/default/objects/FieloEE__Comment__c/fields/FieloEE__Body__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Body__c</fullName>
    <description>The body text of this comment.</description>
    <inlineHelpText>Enter this comment&#39;s text.</inlineHelpText>
    <label>Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>