force-app/main/default/objects/FieloEE__Comment__c/fields/FieloEE__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The member who made this comment.</description>
    <inlineHelpText>Enter the name of the member who made this commment.</inlineHelpText>
    <label>Member</label>
    <referenceTo>FieloEE__Member__c</referenceTo>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>