force-app/main/default/objects/FieloEE__Comment__c/fields/FieloEE__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ok</fullName>
                <default>true</default>
                <label>Ok</label>
            </value>
            <value>
                <fullName>Abuse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>